--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleado_jefes_inmediatos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleado_jefes_inmediatos.cshtml
@@ -38,7 +38,13 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
         //Funcion para inicializar fila al presionar nuevo
+        settings.InitNewRow = (s, e) =>
+        {
+            e.NewValues["Aprueba_vacaciones"] = false;
+            e.NewValues["Aprueba_prestamo"] = false;
 
+
+        };
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdEmpleado_aprueba";
@@ -46,11 +52,11 @@
             column.Width = Unit.Percentage(50);
             column.EditorProperties().ComboBox(p =>
             {
-                p.Columns.Add("pe_nombre", "Empleado").Width = Unit.Percentage(100);
-                p.TextField = "pe_nombre";
+                p.Columns.Add("Empleado", "Empleado").Width = Unit.Percentage(100);
+                p.TextField = "Empleado";
                 p.ValueField = "IdEmpleado";
                 p.ValueType = typeof(decimal);
-                p.DataSource = ViewBag.lst_jor;
+                p.DataSource = ViewBag.lst_empleado;
             });
         });
         settings.Columns.Add(column =>
