--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
@@ -156,7 +156,7 @@
                 $.ajax({
                     type: 'POST',
                     data: JSON.stringify(datos),
-                    url: '@Url.Action("calculat_vacaciones", "Vacaciones", new { Area = "RRHH" })',
+                    url: '@Url.Action("calcular_vacaciones", "Vacaciones", new { Area = "RRHH" })',
                     async: false,
                     bDeferRender: true,
                     bProcessing: true,
