--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Modificar.cshtml
@@ -1,4 +1,5 @@
-﻿@model Core.Erp.Info.RRHH.ro_Solicitud_Vacaciones_x_empleado_Info
+﻿
+@model Core.Erp.Info.RRHH.ro_Solicitud_Vacaciones_x_empleado_Info
 @{
     ViewBag.Title = "Modificar solicitud";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -16,68 +17,23 @@
     }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-
 @using (Html.BeginForm("Modificar", "Vacaciones", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdSolicitud);
-    @Html.HiddenFor(q => q.IdEmpleado);
-    @Html.HiddenFor(q => q.IdVacacion);
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdSolicitud, new { @id = "IdTransaccionSession" })
 
-    if (ViewBag.MensajeSuccess != null)
-    {
-        <div class="alert alert-success alert-dismissible">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-            <h4>
-                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
-            </h4>
-        </div>
-    }
     <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-10">
+        <div class="col-md-6">
+            <div class="col-md-12">
+
                 <div class="form-group">
                     <label for="IdProveedor">Empleado*</label>
                     @Html.Partial("_CmbEmpleado_vacaciones", Model.IdEmpleado)
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-1">
-                <label for="IdImprimir"></label>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                        <i class="fa fa-print"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="col-md-1">
-                <label for="IdNuevo"></label>
-                <div class="form-group">
-                    <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","Vacaciones",new { Area = "RRHH", IdEmpresa = Model.IdEmpresa },null)">
-                        <i class="fa fa-plus"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-
-                <div class="form-group">
-                    <label for="IdProveedor">Empleado autoriza*</label>
-                    @Html.Partial("_CmbEmpleado_autoriza_vacaciones", Model.IdEmpleado_aprue)
-                    @Html.ValidationMessageFor(q => q.IdEmpleado_aprue, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-
-    
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="Fecha_Desde">Fecha desde*</label>
                     <div class="input-group date">
@@ -92,7 +48,6 @@
                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.ClientSideEvents.DateChanged = "function(s,e){get_perioos();}";
 
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_Desde, "", new { @class = "text-danger" })
@@ -100,7 +55,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="Fecha_Hasta">Fecha hasta*</label>
                     <div class="input-group date">
@@ -115,14 +70,13 @@
                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.ClientSideEvents.DateChanged = "function(s,e){get_perioos();}";
 
                    }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha_Hasta, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="Fecha_Retorno">Fecha retorno*</label>
                     <div class="input-group date">
@@ -142,24 +96,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    <div class="form-group">
-                        <label for="Gozadas_Pgadas"></label>
-                        @Html.DevExpress().CheckBoxFor(q => q.Gozadas_Pgadas, settings =>
-                       {
-                           settings.Name = "Gozadas_Pgadas";
-                           settings.Text = "Vacaciones gozadas";
 
-                       }).GetHtml()
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="Observacion">Observación*</label>
@@ -167,16 +104,15 @@
                     @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
+        </div>
+
+        <div class="col-md-6">
+            <div class="col-md-6">
 
                 <div class="form-group">
-                    <label for="GridViewPartial_prestamos_det">Detalle prestamos*</label>
-                    @Html.Action("GridViewPartial_solicitud_vacaciones_det")
+                    <label for="GridViewPartial_prestamos_det">Periodos de vacaciones</label>
+                    @Html.Action("GridViewPartial_vacaciones_periodos")
 
                 </div>
             </div>
@@ -184,6 +120,19 @@
 
     </div>
 
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-12">
+
+                <div class="form-group">
+                    <label for="GridViewPartial_prestamos_det">Detalle periodos a solicitar</label>
+                    @Html.Action("GridViewPartial_solicitud_vacaciones_det")
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
     <div class="box-footer">
@@ -196,70 +145,64 @@
 }
 
 
-
 <script>
-    
-    $(function () {
-        calcular_vacaciones();
-       
-    });
+
 
 
     function calcular_vacaciones()
-    {
-        var datos = {
-            IdEmpleado: IdEmpleado.GetValue()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("calculat_vacaciones", "Vacaciones", new { Area = "RRHH" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data)
             {
-                IdVacacion.PerformCallback();
-
-            },
-            error: function (error)
-            {
-            }
+                 var datos = {
+                     IdEmpleado: IdEmpleado.GetValue(),
+                     IdTransaccionSession: $("#IdTransaccionSession").val()
+                }
+                $.ajax({
+                    type: 'POST',
+                    data: JSON.stringify(datos),
+                    url: '@Url.Action("calcular_vacaciones", "Vacaciones", new { Area = "RRHH" })',
+                    async: false,
+                    bDeferRender: true,
+                    bProcessing: true,
+                    dataType: 'json',
+                    contentType: 'application/json; charset=utf-8',
+                    success: function (data)
+                    {
+                    },
+                    error: function (error)
+                    {
+                    }
         });
+        GridViewPartial_vacaciones_periodos.PerformCallback();
     };
 
-    function get_perioos() {
-        var datos = {
-            FechaDesde:Fecha_Desde.GetValue(),
-            FechaHasta:Fecha_Hasta.GetValue(),
-            IdEmpleado: IdEmpleado.GetValue(),
-            IdTransaccionSession:$("#IdTransaccionSession").val()
+    function add_periodo(KeyValue )
+            {
+                 var datos = {
+                     KeyValue: KeyValue,
+                     IdTransaccionSession: $("#IdTransaccionSession").val()
 
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("get_list_vacaciones", "Vacaciones", new { Area = "RRHH" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                GridViewPartial_solicitud_vacaciones_det.PerformCallback();
-
-            },
-            error: function (error) {
-            }
+                }
+                $.ajax({
+                    type: 'POST',
+                    data: JSON.stringify(datos),
+                    url: '@Url.Action("add_vacaciones", "Vacaciones", new { Area = "RRHH" })',
+                    async: false,
+                    bDeferRender: true,
+                    bProcessing: true,
+                    dataType: 'json',
+                    contentType: 'application/json; charset=utf-8',
+                    success: function (data)
+                    {
+                    },
+                    error: function (error)
+                    {
+                    }
         });
+        GridViewPartial_solicitud_vacaciones_det.PerformCallback();
     };
 
 
-    function Imprimir() {
-        var location = GetPathServer();
-        var win = window.open(location +"/Reportes/RRHHReportes/ROL_007?IdEmpleado="+@Model.IdEmpleado+"&IdSolicitud="+@Model.IdSolicitud, '_blank');
-        win.focus();
-    }
 </script>
+
+
+
+
